--- a/src/custom.css
+++ b/src/custom.css
@@ -1,27 +1,31 @@
 /* ==== PALETTE COLOR ==== */
 :root{
-    --main-color:#41644A;
-    --dark-color:#263A29;
-    --heading-color:#E86A33;
-    --text-color:#F2E3DB
+  --main-color:#41644A;
+  --dark-color:#263A29;
+  --heading-color:#E86A33;
+  --text-color:#F2E3DB
 } 
 
 .difficultyCard .difficulty {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0; 
-    transition: opacity 0.7s ease;
-  }
-  
-  .difficultyCard:hover .difficulty {
-    opacity: 1; 
-  }
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0; 
+  transition: opacity 0.7s ease;
+}
+
+.difficultyCard:hover .difficulty {
+  opacity: 1; 
+}
+
+.container{
+  max-width: 1300px;
+}
   
 
 
