--- a/src/custom.css
+++ b/src/custom.css
@@ -59,9 +59,10 @@
   display: flex;
   flex-direction: row; /* Align items horizontally */
   padding: 10px;
-  background-color: #f1f1f1;
   margin-right: 10px;
 }
+
+
 
 .arrow {
   position: absolute;
@@ -69,7 +70,6 @@
   transform: translateY(-50%);
   width: 40px;
   height: 40px;
-  background-color: #ccc;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -79,11 +79,11 @@
 }
 
 .arrow.left {
-  left: 10px;
+  left: 0;
 }
 
 .arrow.right {
-  right: 10px;
+  right: 0;
 }
 
 
